thanks to Kelley for polishing the English

--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -40,6 +40,8 @@
 \renewcommand{\)}{\right)}
 \renewcommand{\[}{\left[}
 \renewcommand{\]}{\right]}
+\newcommand{\ben}{\begin{enumerate}}
+\newcommand{\een}{\end{enumerate}}
 
 \newcommand{\sn}{\ensuremath{S_n}\xspace}
 \newcommand{\tf}{b_i}
