a few more edits and improvements
mostly in the ccl

--- a/abstract.tex
+++ b/abstract.tex
@@ -22,6 +22,6 @@
   Numerical results are presented for different grids (quadrilateral, hexagonal, polygonal, and rectangular
 	with local mesh adaptation). 
 %
-	Algebraic MultiGrid (AMG) and Symmetric Gauss-Seidel (SGS) are employed as preconditioners for the MIP 
+	Algebraic MultiGrid (AMG) and Symmetric Gauss-Seidel (SGS) are employed as conjugate gradient preconditioners for the MIP 
 	system. AMG is shown to be significantly more efficient than SGS.
 \end{abstract}
