--- a/mip.tex
+++ b/mip.tex
@@ -33,7 +33,7 @@ Ideally, $\bs{A}$ should be SPD (such that efficient iterative techniques can
 be employed in its linear solve) and easy to form (even on arbitrary grids).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Modified Interior Penalty DSA Scheme \textcolor{red}{for/on} Polygons}
+\subsection{Modified Interior Penalty DSA Scheme for Polygons}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Here, we discuss the Modified Interior Penalty method for the diffusion equation for arbitrary polygons
