--- a/conclusions.tex
+++ b/conclusions.tex
@@ -5,29 +5,39 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 We have extended the Modified Interior Penalty (MIP) form of Diffusion Synthetic Acceleration (DSA) 
 to arbitrary polygonal grids discretized with Piece-Wise Linear Discontinuous finite elements. 
-The MIP-DSA solves employ the same discontinuous finite element trial spaces of the discrete \sn
-transport equation.
+The MIP-DSA solves employ the same discontinuous finite element trial spaces \textcolot{red}{as} 
+the discrete \sn transport equation.
+Since this DSA employs the same discontinuous finite element spaces as the \sn transport discretization,
+only a few addition elementary matrices need to be implemented. 
 %We proposed a simple way to compute the penalty coefficient on such grids. 
 %
-Numerical tests have been run on different grids with various types of polygonal cells,
-demonstrating the effectiveness of MIP as a diffusion synthetic accelerator for 
-\sn transport on arbitrary polygonal grids.
+%%Numerical tests have been run on different grids with various types of polygonal cells,
+%%demonstrating the effectiveness of MIP as a diffusion synthetic accelerator for 
+%%\sn transport on arbitrary polygonal grids.
 %
 %. The advantage of is the potential 
 %reduction of the numbers of unknowns and the possibility to use adaptive mesh 
 %refinement without having hanging nodes. 
 %
 Fourier analyses show that a PWLD discretization of MIP diffusion synthetic accelerator 
-is always stable, including for high-aspect ratio cells. 
+is always stable and effective, including for cells with high-aspect ratio. 
 %
-Numerical experiments have been performed with mesh containing various types of polygonal cells, including
-grids with different polygon types for a given problem and tests with degenerate polygons that mimic
+Numerical experiments have been performed with meshes containing various types of polygonal cells
+(random quadrilaterals, random polygons, hexagons), including
+grids with different polygon types for a given mesh and tests with degenerate polygons that mimic
 grids obtained in adaptive mesh refinement strategies. In these tests, MIP-DSA always performed effectively,
 reducing significantly the number of Source Iterations needed for convergence. 
-We noted that the efficiency of MIP does not seem to \textcolor{red}{be affected by the meshes employed}. 
+We noted that the effectiveness of MIP does not seem to \textcolor{red}{be affected by the meshes employed}. 
 %
 The MIP-DSA  matrix is SPD and we solved the corresponding linear system of equations using a standard Conjugate
 Gradient method with different preconditioners. 
 Algebraic multigrid techniques were found to be the most effective preconditioner with AGMG being more than 20 times
 faster than unpreconditioned CG.
+We conclude that MIP-DSA is a \textcolor{red}{valued/valuable/worthy/worthwhile} option to
+carry out diffusion synthetic accelerations for \sn transport problems on arbitrary polygonal grids and 
+grids obtained through mesh adaptivity.
+Future extensions of this work will include implementation of the technique in a 3D parallel \sn code.
+% and full integration with   
+
+
 
